k8s/base/ingress/nginx-ingress-controller.yaml
# Install NGINX Ingress Controller
# Run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/cloud/deploy.yaml
# Or use this customized version:

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
